# jeremie-src

python_scripts/: CMakeLists.txt  package.xml
python_scripts/scripts/: direct_control.py  generate_sdf.py  graphdatarecorder.py  otter_control.py  position_error_recorder.py  position_error_recorder_original.py  position_error_recorder_saved.py  second_camera_orienter.py  second_camera_orienter_trash.py  speed_modifier.py
uav_packages/: help.txt
uav_packages/Traj_opt_Rosnode/: CMakeLists.txt  package.xml
uav_packages/Traj_opt_Rosnode/config/: config.yaml
uav_packages/Traj_opt_Rosnode/include/: Corridor_generation.h  constraint_verification.h  constraint_verification_old.h  cost_function.h  gdcpp.h  lbfgs.hpp  root_finder.hpp  traj_min_jerk.hpp  traj_min_snap.hpp
uav_packages/Traj_opt_Rosnode/src/: Traj_Opt_Rosnode.cpp
uav_packages/code_detection/: CMakeLists.txt  package.xml
uav_packages/code_detection/code_detection/: README.md
uav_packages/code_detection/src/: Aruco_detect.cpp
uav_packages/code_detection_gimbal/: CMakeLists.txt  package.xml
uav_packages/code_detection_gimbal/src/: Aruco_detect.cpp
uav_packages/filter/global_pose_calculator/: CMakeLists.txt  package.xml  setup.py
uav_packages/filter/global_pose_calculator/launch/: Global_pose_publiher.launch
uav_packages/filter/global_pose_calculator/scripts/: Global_pose_publisher.py  Global_pose_publisher_final.py  Global_pose_publisher_gimbal.py  ukf_bis.py
uav_packages/filter/tfe_msgs/: CMakeLists.txt  package.xml
uav_packages/filter/tfe_msgs/msg/: Odom2DWithCovariance.msg
uav_packages/prediction/bezier_predictor/: CMakeLists.txt  package.xml
uav_packages/prediction/bezier_predictor/scripts/: Predictor.py
uav_system/simulation/: .gitman.yml
uav_system/simulation/ros_packages/mrs_gazebo_common_resources/models/Target_2/: model.config  model.sdf  model_template.sdf
uav_system/simulation/ros_packages/mrs_gazebo_common_resources/models/Target_2/meshes/: Target_2.dae
uav_system/simulation/ros_packages/mrs_gazebo_common_resources/models/Target_2/trajectories/: Traj_1-3ms.txt  accelerated_full_small.txt  blabla.csv  circlar_traj.csv  circle.py  circular_traj.txt  full_traj.py  full_traj.txt  full_traj_bien.txt  full_traj_small.txt  help.txt  infinity.csv  infinity.txt  infinity_drifted.py  infinty_traj.txt  oval.csv  oval.py  oval_acc_2.txt  oval_traj _acc.txt  oval_traj.txt  oval_traj_acc.csv  random_traj.txt  straight_traj.txt  test2.py  traj_05-15ms.txt
uav_system/simulation/ros_packages/mrs_gazebo_common_resources/worlds/: flood.world
uav_system/simulation/ros_packages/mrs_simulation/launch/: automated_simulation.launch  down_simulation.launch
uav_system/simulation/ros_packages/mrs_simulation/models/mrs_robots_description/sdf/: component_snippets.sdf.jinja  x500.sdf.jinja
uav_system/uav_core/: .gitman.yml
uav_system/uav_core/ros_packages/mrs_uav_general/config/worlds/: world_camp.yaml  world_cisar.yaml  world_domasice.yaml  world_farm_seven_stars.yaml  world_farmstay_basin.yaml  world_local.yaml  world_local_hector.yaml  world_nemi_ground.yaml  world_nemi_water.yaml  world_rumburk.yaml  world_rumburk_pole.yaml  world_simulation_challenge1.yaml  world_simulation_challenge2.yaml  world_simulation_large_safety_area.yaml  world_simulation_local.yaml  world_svetovar.yaml  world_temesvar_field.yaml  world_temesvar_mockup.yaml  world_temesvar_river.yaml  world_tii_net.yaml  world_tusovice.yaml  world_tusovice_garden.yaml  world_tusovice_left_from_electricity.yaml  world_tusovice_right_from_electricity.yaml  world_upenn.yaml
uav_system/uav_core/ros_packages/mrs_uav_general/launch/: automated_core.launch  core.launch  core_UAV_USV.launch  down_core.launch
uav_system/uav_core/ros_packages/mrs_uav_general/scripts/: automated_delayed_launch.py  down_delayed_launch.py
uav_system/uav_core/ros_packages/mrs_uav_general/src/: delayed_launch.py
uav_system/uav_core/tmux_scripts/swarming_template/: world.yaml
