<?xml version="1.0"?>
<package format="2">
  <name>Traj_Opt_Rosnode</name>
  <version>0.0.0</version>
  <description>The Trajectory optimization</description>
  <maintainer email="you@yourdomain.tld">Your Name</maintainer>
  <license>MIT</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>std_srvs</build_depend>
<build_depend>message_filters</build_depend>
<build_depend>visualization_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>nav_msgs</build_depend>
<build_depend>mrs_lib</build_depend>
<build_depend>mrs_msgs</build_depend>

<exec_depend>roscpp</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>std_srvs</exec_depend>
<exec_depend>message_filters</exec_depend>
<exec_depend>visualization_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>nav_msgs</exec_depend>
<exec_depend>mrs_lib</exec_depend>
<exec_depend>mrs_msgs</exec_depend>
</package>

<!--
<?xml version="1.0"?>
<package format="2">
  <name>traj_opt_rosdnode</name>
  <version>0.0.0</version>
  <description>The code_detection package</description>
  <maintainer email="you@yourdomain.tld">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>

</package>

-->





