<?xml version="1.0"?>
<package format="2">
  <name>code_detection</name>
  <version>0.0.0</version>
  <description>The code_detection package</description>
  <maintainer email="you@yourdomain.tld">Your Name</maintainer>
  <license>MIT</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>cv_bridge</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>image_transport</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>tf2_geometry_msgs</build_depend>
<build_depend>std_msgs</build_depend>

<exec_depend>roscpp</exec_depend>
<exec_depend>cv_bridge</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>image_transport</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>tf2_geometry_msgs</exec_depend>
<exec_depend>std_msgs</exec_depend>
</package>

<!--
<?xml version="1.0"?>
<package format="2">
  <name>code_detection</name>
  <version>0.0.0</version>
  <description>The code_detection package</description>
  <maintainer email="you@yourdomain.tld">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>

</package>

-->





