<?xml version="1.0"?>
<package format="2">
  <name>global_pose_calculator</name>
  <version>0.0.1</version>
  <description>ROS package for calculating global pose</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tfe_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tfe_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
</package>

